<?php

namespace App\Controllers;

/**
 * Class ShowTableController
 *
 * Controller for displaying a table of data.
 *
 * @see BaseController
 */
class ShowTableController extends BaseController
{
}
